tests/whiley/valid/test_706.wyal
assert "division by zero":
    if:
        true
    then:
        3 != 0


