tests/whiley/invalid/test_117.wyal
assert "division by zero":
    forall(int y):
        if:
            true
        then:
            y != 0


